fixed a path to unit tests in workflow

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,4 +21,4 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Run
-      run: Firmware/unit-tests/run -c
+      run: Firmware/unit_tests/run -c
