--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -10,15 +10,16 @@ on:
       - '**.md'
 
 jobs:
-
   build:
     name: Build
-
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v1
+
+    - name: Install Python packages
+      uses: pip install ninja
 
     - name: Run
       run: Firmware/unit_tests/run -c
