continuing to setup CI

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Install Python packages
-      uses: pip install ninja
+      run: pip install ninja
 
     - name: Run
       run: Firmware/unit_tests/run -c
