--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -19,7 +19,10 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Install Python packages
-      run: pip install ninja
+      run: |
+        pip install ninja
+        python -m pip install --upgrade pip
+        pip install .
 
     - name: Run
       run: Firmware/unit_tests/run -c
