--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -17,9 +17,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1
-
     - name: Install Python packages
       run: pip3 install ninja
-
+    - name: Setup ninja-build
+      uses: seanmiddleditch/gha-setup-ninja@master
     - name: Run
       run: Firmware/unit_tests/run -c
