continuing to setup CI

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -22,6 +22,8 @@ jobs:
     - name: Setup ninja-build
       uses: seanmiddleditch/gha-setup-ninja@master
     - name: Setup gtest
+      uses: CyberZHG/github-action-gtest@master"
+      with:
+        args: "-e ."
     - name: Run
-      uses: CyberZHG/github-action-gtest@master
       run: Firmware/unit_tests/run -c
