--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - name: Checkout
+      uses: actions/checkout@v1
+    - name: Checkout submodules
       uses: textbook/git-checkout-submodule-action@master
     - name: Install Python packages
       run: pip3 install ninja
