--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -29,4 +29,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: coverage_report
-        path: /home/runner/work/midi-grid/midi-grid/Firmware/unit_tests/coverage_report/*
+        path: /home/runner/work/midi-grid/midi-grid/Firmware/unit_tests/coverage_report/
