--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -1,6 +1,7 @@
 name: Unit Tests
 on: 
   push:
+    branch: chaos # temporarily disabling this CI action to run other one more efficiently
     paths-ignore:
       - '**.md'
   pull_request:
