--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Setup ARM GNU tools
       run: sudo apt install gcc-arm-none-eabi
     - name: Build
-      run: ninja Firmware/
+      run: cd Firmware && ninja
 #    - name: Upload coverage report
 #      uses: actions/upload-artifact@v1
 #      with:
