--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,8 +27,28 @@ jobs:
       run: sudo apt install gcc-arm-none-eabi
     - name: Build
       run: cd Firmware && ninja
-#    - name: Upload coverage report
-#      uses: actions/upload-artifact@v1
-#      with:
-#        name: coverage_report
-#        path: Firmware/unit_tests/coverage_report
+    - name: Get version
+      id: get_version
+      run: git rev-list --count master
+    - name: Compress output files
+      run: cd Firmware/output && 7z a midi-grid_v${{ steps.get_version.output }}.7z midi-grid.*
+#    - name: Create Release
+ #       id: create_release
+#        uses: actions/create-release@v1.0.0
+ #       env:
+ #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+  #          tag_name: v${{ steps.get_version.output }}
+  #          release_name: Build v${{ steps.get_version.output }}
+#            draft: false
+  #          prerelease: true
+ #   - name: Upload Release Asset
+  #      id: upload-release-asset 
+  #      uses: actions/upload-release-asset@v1.0.1
+ #       env:
+ #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #      with:
+  #        upload_url: ${{ steps.create_release.outputs.upload_url }}
+   #       asset_path: ./my-artifact.zip
+   #       asset_name: my-artifact.zip
+  #        asset_content_type: application/zip
