--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,8 @@
 name: Build
 on: 
   push:
+    branches:
+    - master
     paths-ignore:
       - '**.md'
   pull_request:
@@ -29,26 +31,28 @@ jobs:
       run: cd Firmware && ninja
     - name: Get version
       id: get_version
+      if: github.event_name == 'push'
       run: echo "::set-output name=version::$(git rev-list --count origin/master)"
     - name: Compress output files
+      if: github.event_name == 'push'
       run: cd Firmware/output && 7z a midi-grid_v${{ steps.get_version.outputs.version }}.7z midi-grid.*
-#    - name: Create Release
-#        id: create_release
-#        uses: actions/create-release@v1.0.0
-#        env:
-#            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#            tag_name: v${{ steps.get_version.output }}
-#            release_name: Build v${{ steps.get_version.output }}
-#            draft: false
-#            prerelease: true
-#    - name: Upload Release Asset
-#        id: upload-release-asset 
-#        uses: actions/upload-release-asset@v1.0.1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}
-#          asset_path: ./my-artifact.zip
-#          asset_name: my-artifact.zip
-#          asset_content_type: application/zip
+    - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1.0.0
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+            tag_name: v${{ steps.get_version.outputs.version }}
+            release_name: Build v${{ steps.get_version.outputs.version }}
+            draft: false
+            prerelease: true
+    - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: Firmware/output/midi-grid_v${{ steps.get_version.outputs.version }}.7z
+          asset_name: midi-grid_v${{ steps.get_version.outputs.version }}.7z
+          asset_content_type: application/7z
