--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,29 +30,31 @@ jobs:
     - name: Build
       run: cd Firmware && ninja
     - name: Get version
-      id: get_version
       if: github.event_name == 'push'
+      id: get_version
       run: echo "::set-output name=version::$(git rev-list --count origin/master)"
     - name: Compress output files
       if: github.event_name == 'push'
       run: cd Firmware/output && 7z a midi-grid_v${{ steps.get_version.outputs.version }}.7z midi-grid.*
     - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1.0.0
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-            tag_name: v${{ steps.get_version.outputs.version }}
-            release_name: Build v${{ steps.get_version.outputs.version }}
-            draft: false
-            prerelease: true
+      if: github.event_name == 'push'
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v${{ steps.get_version.outputs.version }}
+        release_name: Build v${{ steps.get_version.outputs.version }}
+        draft: false
+        prerelease: true
     - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: Firmware/output/midi-grid_v${{ steps.get_version.outputs.version }}.7z
-          asset_name: midi-grid_v${{ steps.get_version.outputs.version }}.7z
-          asset_content_type: application/7z
+      if: github.event_name == 'push'
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: Firmware/output/midi-grid_v${{ steps.get_version.outputs.version }}.7z
+        asset_name: midi-grid_v${{ steps.get_version.outputs.version }}.7z
+        asset_content_type: application/7z
