--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -1,8 +1,6 @@
 name: Unit Tests
 on: 
   push:
-    branches: 
-      - chaos # temporarily disabling this CI action to run other one more efficiently
     paths-ignore:
       - '**.md'
   pull_request:
@@ -13,7 +11,6 @@ jobs:
   unit_tests:
     name: Unit tests
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout
       uses: actions/checkout@v1
@@ -34,3 +31,8 @@ jobs:
       with:
         name: coverage_report
         path: Firmware/unit_tests/coverage_report
+    - name: Upload coverage report to Codecov
+       uses: codecov/codecov-action@v1
+       with:
+         token: ${{ secrets.CODECOV_TOKEN }}
+         file: Firmware/unit_tests/coverage_report/coverage_filtered.info
