--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,7 @@ on:
       - master
     paths-ignore:
       - '**.md'
+      - '!Firmware/Src/*'
   pull_request:
     paths-ignore:
       - '**.md'
@@ -27,16 +28,21 @@ jobs:
     - name: Setup ARM GNU tools
       run: sudo apt install gcc-arm-none-eabi
     - name: Build
-      run: cd Firmware && ninja
+      run: cd Firmware && ninja | tee build_log.txt
+    - name: Upload build log
+      uses: actions/upload-artifact@v1
+      with:
+        name: build_log
+        path: Firmware/build_log.txt
     - name: Get version
-      if: github.event_name == 'push'
+      if: success() && github.event_name == 'push'
       id: get_version
       run: echo "::set-output name=version::$(git rev-list --count origin/master)"
     - name: Compress output files
-      if: github.event_name == 'push'
+      if: success() && github.event_name == 'push'
       run: cd Firmware/output && 7z a midi-grid_v${{ steps.get_version.outputs.version }}.7z midi-grid.*
     - name: Create Release
-      if: github.event_name == 'push'
+      if: success() && github.event_name == 'push'
       id: create_release
       uses: actions/create-release@v1.0.0
       env:
@@ -45,9 +51,9 @@ jobs:
         tag_name: v${{ steps.get_version.outputs.version }}
         release_name: Build v${{ steps.get_version.outputs.version }}
         draft: false
-        prerelease: true
+        prerelease: false
     - name: Upload Release Asset
-      if: github.event_name == 'push'
+      if: success() && github.event_name == 'push'
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1.0.1
       env:
