--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -27,11 +27,13 @@ jobs:
     - name: Run
       run: Firmware/unit_tests/run -c
     - name: Upload coverage report
+      if: success()
       uses: actions/upload-artifact@v1
       with:
         name: coverage_report
         path: Firmware/unit_tests/coverage_report
     - name: Upload coverage report to Codecov
+      if: success()
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
